--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -2,4 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  /* ========== Font and Typography ============ */
+  font-family: "Montserrat", sans-serif;
 }
