scss error solved

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,8 +7,8 @@
 /* ==================== GOOGLE FONTS END ==================== */
 
 body {
-  background-color: #f2e2d0;
-  font-family: $body-font;
+  background-color: red;
+  font-family: "Montserrat", sans-serif;
   color: $title-color;
 }
 
