--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@
 /* ==================== GOOGLE FONTS END ==================== */
 
 body {
-  background-color: red;
+  background-color: #f2e2d0;
   font-family: "Montserrat", sans-serif;
   color: $title-color;
 }
