setting button update

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,6 @@
 /* =============== header ================== */
 header {
-  background-color: orange;
+  // background-color: #ea7600;
   height: 100px;
 
   /* padding settings */
